--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   dio: ^5.3.2
   flutter_bloc: ^8.1.3
 
+  # For Video Payer 
+  chewie: ^1.7.0
+  video_player: ^2.7.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
