initilized the audio player

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   # For Video Payer 
   chewie: ^1.7.0
   video_player: ^2.7.1
+  audioplayers: ^5.1.0
+  file_picker: ^5.5.0
 
 dev_dependencies:
   flutter_test:
