--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   audioplayers: ^5.1.0
   file_picker: ^5.5.0
 
+  # Detcator
+  camera: ^0.10.5+4
+  tflite_flutter: ^0.10.1
+  tflite_flutter_helper_plus: ^0.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
