--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   camera: ^0.10.5+4
   tflite_flutter: ^0.10.1
   tflite_flutter_helper_plus: ^0.0.2
+  cached_network_image: ^3.3.0
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
