--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  esewa_flutter_sdk:
+    path: ./esewa_flutter_sdk
+
 
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.0
