--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+   
+   # eSewa
   esewa_flutter_sdk:
     path: ./esewa_flutter_sdk
+
+  # Khalti
+  khalti: ^2.0.0
 
 
   cupertino_icons: ^1.0.2
@@ -37,6 +41,7 @@ dependencies:
   tflite_flutter_helper_plus: ^0.0.2
   cached_network_image: ^3.3.0
   flutter_screenutil: ^5.9.0
+  khalti_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
