--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_screenutil: ^5.9.0
   khalti_flutter: ^3.0.0
 
+# PDF_View
+  pdfrx: ^0.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
